Add support for referees fetching from chat